# Hologram-APEX

./: README.md
app/: Cargo.toml  README.md  package.json  tailwind.config.js
app/archive/: CLAUDE.md  Cargo.toml  config.toml  vercel.json
app/archive/.cargo/: config.toml
app/archive/.claude/: settings.local.json
app/archive/.cursor/rules/: project.mdc
app/archive/benches/: Cargo.toml  kernel_performance.rs
app/archive/benchmarks/: benchmark_results_1762189911.json  webgpu-baseline.txt  webgpu-current.txt  webgpu-report.md
app/archive/crates/hologram-backends/: Cargo.toml  build.rs
app/archive/crates/hologram-codegen/: Cargo.toml  build.rs
app/archive/crates/hologram-compiler/: Cargo.toml  README.md  build.rs
app/archive/crates/hologram-core/: Cargo.toml  README.md  build.rs
app/archive/crates/hologram-ffi/: Cargo.toml  README.md  UPDATE_COMPLETE.md  generate_bindings.rs
app/archive/crates/hologram-hrm/: Cargo.toml
app/archive/crates/hologram-memory-manager/: Cargo.toml  README.md
app/archive/crates/hrm-spec/: COMPLETION_REPORT.md  Cargo.toml  IMPLEMENTATION_STATUS.md  PROJECT_SUMMARY.md  README.md
app/archive/devcontainer/: Dockerfile
app/archive/docs/: FUTURE_PROMPTS.md  README.md  docs.json  index.mdx
app/archive/docs/architecture/: BACKEND_ARCHITECTURE.mdx  BACKEND_TRAIT_ARCHITECTURE.mdx  HIERARCHICAL_FACTORIZATION.mdx  PRIMORIAL_GEOMETRY.mdx  SIMPLIFIED_COMPILER_PROPOSAL.md  atlas_sigil_algebra_formal_specification_v_1.mdx  data_plan_a.md  data_plan_b.md  hologram_ir_hgir_specification_v_1.mdx  page-theory.mdx
app/archive/docs/hologram-onnx-compiler/: ARCHITECTURE.mdx  BINARY_FORMAT.mdx  EXAMPLES.mdx  PASS1_COLLECTION.mdx  PASS2_EMBEDDING.mdx  PASS3_PRECOMPUTATION.mdx  PASS4_BINARY.mdx  README.mdx  RUNTIME.mdx
app/archive/docs/kernels/: ADDING_KERNELS.mdx  KERNEL_QUICK_REF.mdx  USER_KERNELS.mdx
app/archive/docs/memory/: ARCHITECTURE.mdx  BACKENDS.mdx  README.mdx  STREAMING.mdx
app/archive/docs/moonshine/: ARBITRARY_PRECISION_GUARANTEES.mdx  ARCHITECTURE.mdx  BASE96_CODEC_IMPLEMENTATION_GUIDE.md  COMPILED_OPERATION_DESIGN.mdx  HOLOGRAPHIC-EMBEDDINGS-IMPLEMENTATION.md  IMPLEMENTATION_HISTORY.mdx  LIFT_RESONATE_CRUSH.mdx  PROGRESS.mdx
app/archive/docs/onnx/: ARCHITECTURE.mdx  COMPILER_ARCHITECTURE_ANALYSIS.md  CRATE_STRUCTURE.mdx  IMAGE_GENERATION.mdx  IMPLEMENTATION_SPEC.mdx  PHASE1_PROGRESS.md  REFACTORING_PLAN.md  SHAPE_INFERENCE.md  TESTING_STRATEGY.mdx
app/archive/docs/performance/: BENCHMARKING.mdx  CANONICALIZATION_ANALYSIS.mdx  CPU_BACKEND_TRACING.mdx
app/archive/docs/pytorch/: README.mdx  RECOMMENDATIONS.mdx  UNIVERSAL_DLPACK_ARCHITECTURE.mdx
app/archive/docs/sdk/: ROADMAP.mdx  TESTING_GUIDE.mdx
app/archive/docs/testing/: EARLY_ERROR_DETECTION_SUMMARY.mdx  MODEL_VALIDATION_STRATEGY.mdx
app/archive/docs/wasm/: CROSS_PLATFORM_TESTING.mdx  MODEL_STREAMING_QUANTIZATION.mdx  WASM_DEPLOYMENT_GUIDE.mdx
app/archive/docs/webgpu/: CLIP_ENCODER_IMPLEMENTATION.mdx  IMPLEMENTATION_HISTORY.mdx  QUICKSTART.mdx  README.mdx  SDXS_IMPLEMENTATION_COMPLETE.mdx  SDXS_PIPELINE_INTEGRATION.mdx  STREAMING_ARCHITECTURE.mdx  WEBGPU_BENCHMARKING.mdx  WEBGPU_IMPLEMENTATION.mdx  WEBGPU_MEMORY_OPTIMIZATION.mdx
app/archive/examples/: requirements.txt
app/archive/examples/browser-demo/: README.md  index.html
app/archive/examples/python/: README_PYTORCH_DEVICE.md  hologram_model_server_example.py  pytorch_device_api.bak.py  pytorch_hologram_device.py  pytorch_hologram_example.py  pytorch_hologram_integration.py  test_phase2a_import.py  test_torch_device.py
app/archive/examples/rust/: webgpu_demo.rs
app/archive/hologram/: CLAUDE.md  prompt.md  rust-toolchain.toml
app/archive/hologram-sdk/: README.md
app/archive/hologram-sdk/docs/: ONNX_COMPILER.md
app/archive/hologram-sdk/rust/: README.md
app/archive/hologram/kernels/: IMPLEMENTATION.md  README.md  SETUP.md
app/archive/notebooks/: README.md  benchmark_utils.py  performance_analysis.ipynb  pytorch_vs_atlas_benchmarks.ipynb  requirements.txt
app/archive/public/: README.md  next.config.ts  package.json  pnpm-lock.yaml
app/archive/public/app/: globals.css  layout.tsx  page.tsx
app/archive/public/content/: community.json  demos.json  landing.json  research.json  team.json
app/archive/public/public/: CNAME
app/archive/schemas/: IMPLEMENTATION.md
app/archive/schemas/stdlib/: compiler.py
app/archive/scripts/: README.md  benchmark-webgpu.sh  build-all.sh  build-wasm-demo.sh  clean.sh  compile-sd-turbo-models.sh  convert-onnx-external-data.py  download_models.sh  generate_mshr.py  patch-webgpu-limits.py  rebuild_dlpack_bindings.sh  rebuild_ffi.sh  start-demo.sh  test-wasm.sh
app/crates/holoapp-cli/: Cargo.toml
app/crates/holoapp-cli/src/: cli.rs  main.rs
app/crates/hologram-app/: Cargo.toml
app/crates/hologram-app/src/: config.rs  error.rs  lib.rs  onnx.rs
app/src/: App.tsx  index.css
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/src/: lib.rs  main.rs
app/src/components/: ChatContainer.tsx  ChatHistory.tsx  ChatInput.tsx  ChatMessage.tsx  Header.tsx  ModelSelector.tsx
app/src/hooks/: useChat.ts  useModels.ts  useTheme.ts
app/src/lib/: tauri.ts
hologram/bins/hologram-compile/: Cargo.toml  README.md
hologram/bins/hologram-compile/src/: cli.rs  compiler.rs  main.rs  output.rs
hologram/bins/hologram-compile/tests/: integration_test.rs
onnx/: Cargo.toml  README.md  rust-toolchain.toml
onnx/crates/compiler/: Cargo.toml  SHOW_OPS_USAGE.md  build.rs  my-config.toml
onnx/crates/compiler/src/: error.rs  lib.rs  safetensors_loader.rs
onnx/crates/compiler/tests/: arrow_tensor_integration.rs  onnx_single_node_suite.rs
onnx/crates/downloader/: Cargo.toml  README.md
onnx/crates/downloader/src/: lib.rs
onnx/crates/onnx_converter/: Cargo.toml  README.md
onnx/crates/onnx_converter/scripts/: pytorch_to_onnx.py
onnx/crates/onnx_converter/src/: lib.rs  python_env.rs  pytorch_converter.rs
onnx/examples/: download_with_filtering.rs
onnx/scripts/: convert-onnx-external-data.py  download_models.sh
onnx/src/: lib.rs  main.rs
(+624 files in other folders)
