[workspace]
resolver = "2"
members = [
    "crates/hologram-app",
    "crates/holoapp-cli",
    "src-tauri",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Hologram Team"]
license = "MIT"
repository = "https://github.com/gethologram/hologram-app"

[workspace.dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
futures = "0.3"
async-trait = "0.1"

# HTTP server
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Utils
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
bytes = "1"
dirs = "6"
sha2 = "0.10"
num_cpus = "1"

# CLI
clap = { version = "4", features = ["derive", "env"] }
indicatif = "0.17"
dialoguer = "0.11"
colored = "3"

# Internal crates
hologram-app = { path = "crates/hologram-app" }

# External crates (will be added when available)
# hologram-onnx = { git = "https://github.com/..." }
