[package]
name = "hologram-desktop"
version.workspace = true
edition.workspace = true
description = "Hologram Desktop - Local LLM chat interface"
authors.workspace = true
license.workspace = true

[lib]
name = "hologram_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"

# Core hologram library
hologram-app.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Async
tokio.workspace = true
futures.workspace = true

# Logging
tracing.workspace = true
