[package]
name = "holoapp-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "CLI for Hologram - run local LLMs with Ollama-compatible APIs"

[[bin]]
name = "hologram"
path = "src/main.rs"

[dependencies]
hologram-app.workspace = true
clap.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
indicatif.workspace = true
dialoguer.workspace = true
colored.workspace = true
serde.workspace = true
serde_json.workspace = true
futures.workspace = true
chrono.workspace = true
dirs.workspace = true
