[package]
name = "hologram-app"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core library for Hologram - local LLM inference with Ollama-compatible APIs"

[features]
default = ["server"]
server = ["axum", "tower", "tower-http"]

[dependencies]
# From workspace
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
futures.workspace = true
async-trait.workspace = true
tracing.workspace = true
thiserror.workspace = true
uuid.workspace = true
chrono.workspace = true
reqwest.workspace = true
bytes.workspace = true
dirs.workspace = true
sha2.workspace = true
num_cpus.workspace = true

# Optional server dependencies
axum = { workspace = true, optional = true }
tower = { workspace = true, optional = true }
tower-http = { workspace = true, optional = true }

# Note: hologram-onnx is an external crate
# Stub interfaces are defined in src/onnx_stub.rs
# Uncomment when the external crate is available:
# hologram-onnx = { git = "https://github.com/..." }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
