[package]
name = "hologram-compile"
version = "0.1.0"
edition = "2021"
authors = ["Hologram Contributors"]
description = "CLI tool for compiling Python kernels to Atlas ISA"
license = "MIT OR Apache-2.0"
repository = "https://github.com/anthropics/hologram"

[[bin]]
name = "hologram-compile"
path = "src/main.rs"

[dependencies]
# CLI framework
clap = { version = "4.5", features = ["derive", "cargo", "env"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Terminal output
colored = "2.1"

# File I/O
camino = { version = "1.1", features = ["serde1"] }

# Terminal detection for colorization
atty = "0.2"

# Internal dependencies
hologram-compiler = { path = "../../crates/compiler" }
hologram-backends = { path = "../../crates/backends" }
hologram-codegen = { path = "../../crates/codegen" }

[dev-dependencies]
tempfile = "3.8"
assert_cmd = "2.0"
predicates = "3.0"
