[package]
name = "hologram-onnx-downloader"
version = "0.1.0"
edition = "2021"
authors = ["Hologram Team"]
license = "MIT OR Apache-2.0"
description = "Advanced HuggingFace model downloader with resumable downloads and PyTorch to ONNX conversion"
repository = "https://github.com/hologramapp/hologram"

[lib]
name = "hologram_onnx_downloader"
path = "src/lib.rs"

[dependencies]
# Async runtime
tokio = { version = "1.39", features = ["full"] }
futures-util = "0.3"

# HTTP client
reqwest = { version = "0.12", features = ["stream"] }

# Git operations
git2 = "0.19"

# File operations
glob = "0.3"

# Hashing
sha2 = "0.10"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"
