[package]
name = "hologram-codegen"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
rayon = { workspace = true }
hologram-common = { path = "../hologram-common" }

# Dynamic kernel loading (not supported on WASM)
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
libloading = "0.8"

[build-dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }

[features]
default = []