[package]
name = "hologram-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core operations and primitives using Hologram circuit compilation"
readme = "README.md"
keywords.workspace = true
categories.workspace = true

[dependencies]
# Runtime dependencies
hologram-backends = { path = "../hologram-backends" }
hologram-codegen = { path = "../hologram-codegen" }
# Temporary: hologram-compiler types for legacy operations (to be removed in Phase 1)
hologram-compiler = { path = "../hologram-compiler" }
thiserror.workspace = true
tracing = "0.1"
bytemuck = "1.14"
paste = "1.0"
rayon = { workspace = true, optional = true }
parking_lot = { version = "0.12", optional = true }
# MoonshineHRM dependencies
memmap2 = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# WebGPU support (optional)
wgpu = { version = "27.0.1", optional = true }

# Dynamic kernel loading (not supported on WASM)
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
libloading = "0.9"

# WASM support - getrandom needs "js" feature for wasm32 targets
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { workspace = true, features = ["js"] }
web-sys = { version = "0.3", features = ["Window", "Performance"] }

[features]
default = ["threading"]
threading = ["parking_lot", "rayon"]
cuda = ["hologram-backends/cuda"]
webgpu = ["hologram-backends/webgpu", "wgpu"]

[build-dependencies]
# Hologram compiler used at build-time for code generation
hologram-compiler = { path = "../hologram-compiler" }
# Backends for ISA translation at build-time
hologram-backends = { path = "../hologram-backends" }
# JSON parsing for schema files
serde_json = "1.0"

[dev-dependencies]
criterion.workspace = true
proptest.workspace = true
tempfile = "3"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3"

[[bench]]
name = "dlpack_benchmark"
harness = false
