[build-system]
requires = ["setuptools>=42", "wheel", "cmake>=3.18", "torch>=2.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hologram-torch"
version = "0.1.0"
description = "Native PyTorch backend for Hologram"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "torch>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "black",
    "isort",
    "mypy",
]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
