[package]
name = "hologram-onnx-compiler"
version = "0.1.0"
edition = "2021"
authors = ["Hologram Team"]
license = "MIT OR Apache-2.0"
description = "Compile-time ONNX model compiler for Hologram"
repository = "https://github.com/hologramapp/hologram"

[[bin]]
name = "hologram-onnx-compiler"
path = "src/main.rs"

[[bin]]
name = "holo-run"
path = "src/bin/holo-run.rs"

[lib]
name = "hologram_onnx_compiler"
path = "src/lib.rs"

[dependencies]
# Core Hologram dependencies
hologram-core = { path = "../../../crates/hologram-core" }
hologram-backends = { path = "../../../crates/hologram-backends" }
hologram-compiler = { path = "../../../crates/hologram-compiler" }
hologram-hrm = { path = "../../../crates/hologram-hrm" }
hologram-common = { path = "../../../crates/hologram-common" }

# ONNX parsing
prost = "0.13"
prost-types = "0.13"

# Weight handling
safetensors = "0.4"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
toml = "0.8"

# Utilities
bytemuck = { version = "1.14", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = "0.4"
ordered-float = "4.2"
rayon = "1.8"
tokio = { version = "1.35", features = ["full"] }
ahash = "0.8"
rustc-hash = "2.1"
petgraph = "0.6.4"
half = "2.4"
dirs = "5.0"
parking_lot = "0.12"
lru = "0.12"

# Memory-mapped I/O (runtime)
memmap2 = "0.9"

[build-dependencies]
prost-build = "0.13"

[dev-dependencies]
tempfile = "3.8"
serde_json = "1.0"
serial_test = "3.0"
criterion = { version = "0.5", features = ["html_reports"] }
